--- a/META.yml
+++ b/META.yml
@@ -35,6 +35,7 @@ requires:
   File::MMagic: 0
   Getopt::Lucid: 0
   HTML::Element: 0
+  HTML::Entities: 0
   HTML::ExtractMain: 0
   HTTP::CookieJar: 0
   HTTP::Tiny: 0
@@ -50,4 +51,4 @@ resources:
   bugtracker: https://github.com/rupertl/app-zapzi/issues
   homepage: https://metacpan.org/release/App-Zapzi
   repository: git://github.com/rupertl/app-zapzi.git
-version: 0.001
+version: 0.002
