--- a/META.yml
+++ b/META.yml
@@ -4,6 +4,7 @@ author:
   - 'Rupert Lane <rupert@rupert-lane.org>'
 build_requires:
   File::Find: 0
+  File::Slurp: 0
   File::Temp: 0
   Test::DBIx::Class::Schema: 0
   Test::More: 0
@@ -30,7 +31,7 @@ requires:
   Data::Validate::URI: 0.06
   DateTime: 0
   DateTime::Format::SQLite: 0
-  EBook::MOBI: 0
+  EBook::MOBI: 0.65
   Encode: 0
   Exporter: 0
   File::HomeDir: 0
@@ -42,7 +43,7 @@ requires:
   HTTP::CookieJar: 0
   HTTP::Tiny: 0
   Module::Find: 0.11
-  Moo: 0
+  Moo: 1.003000
   Moo::Role: 0
   SQL::Translator: 0
   Text::Markdown: 0
@@ -55,4 +56,4 @@ resources:
   bugtracker: https://github.com/rupertl/app-zapzi/issues
   homepage: https://metacpan.org/release/App-Zapzi
   repository: git://github.com/rupertl/app-zapzi.git
-version: 0.005
+version: 0.006
