Import of RUPERTL/App-Zapzi-0.009 from CPAN.
gitpan-cpan-distribution: App-Zapzi
gitpan-cpan-version:      0.009
gitpan-cpan-path:         RUPERTL/App-Zapzi-0.009.tar.gz
gitpan-cpan-author:       RUPERTL
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -25,6 +25,7 @@ no_index:
 requires:
   Browser::Open: 0
   Carp: 0
+  Cwd: 0
   DBIx::Class::Core: 0
   DBIx::Class::Schema: 0
   Data::Validate::URI: 0.06
@@ -60,4 +61,4 @@ resources:
   bugtracker: https://github.com/rupertl/app-zapzi/issues
   homepage: https://metacpan.org/release/App-Zapzi
   repository: git://github.com/rupertl/app-zapzi.git
-version: 0.008
+version: 0.009
