--- a/META.yml
+++ b/META.yml
@@ -31,6 +31,7 @@ requires:
   Data::Validate::URI: 0.06
   DateTime: 0
   DateTime::Format::SQLite: 0
+  EBook::EPUB: 0.6
   EBook::MOBI: 0.65
   Encode: 0
   Exporter: 0
@@ -43,6 +44,7 @@ requires:
   HTML::Element: 0
   HTML::Entities: 0
   HTML::ExtractMain: 0.63
+  HTML::TreeBuilder: 0
   HTTP::CookieJar: 0
   HTTP::Tiny: 0
   Module::Find: 0.11
@@ -61,4 +63,4 @@ resources:
   bugtracker: https://github.com/rupertl/app-zapzi/issues
   homepage: https://metacpan.org/release/App-Zapzi
   repository: git://github.com/rupertl/app-zapzi.git
-version: 0.009
+version: 0.010
